--- a/3/DirectAgents.Web/DirectAgents.Web/Web.config
+++ b/3/DirectAgents.Web/DirectAgents.Web/Web.config
@@ -15,6 +15,9 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+
+    <add key="GmailReporting_Email" value="reporting@directagents.com" />
+    <add key="GmailReporting_Password" value="1423qrwe" />
   </appSettings>
 
   <system.web>
