--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -16,6 +16,7 @@
     <add name="ClientPortalDWContext" connectionString="metadata=res://*/Contexts.ClientPortalDW.csdl|res://*/Contexts.ClientPortalDW.ssdl|res://*/Contexts.ClientPortalDW.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sql2;initial catalog=ClientPortalDW;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="CakeTrafficContext" connectionString="data source=.\sql2;initial catalog=CakeTraffic;user id=sa;password=sp0ngbOb;" providerName="System.Data.SqlClient" />
 -->
+    <add name="DAContext" connectionString="data source=biz\sqlexpress;initial catalog=DirectAgentsDev;user id=sa;password=sp0ngbOb; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
 
   <loggingConfiguration name="" tracingEnabled="true" defaultCategory="General">
@@ -53,6 +54,9 @@
 
     <add key="GmailEmailer_Username" value="portal@directagents.com" />
     <add key="GmailEmailer_Password" value="Welcomenew1" />
+    <add key="GmailReporting_Email" value="reporting@directagents.com" />
+    <add key="GmailReporting_Password" value="1423qrwe" />
+
     <add key="CakeApiKey" value="FCjdYAcwQE" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
     <add key="BingApiToken" value="EW65911AO" />
