--- a/1/DirectAgents.Domain/DirectAgents.Domain.csproj
+++ b/1/DirectAgents.Domain/DirectAgents.Domain.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Contexts\DAContext.cs" />
     <Compile Include="Entities\Cake\OfferDailySummary.cs" />
     <Compile Include="Entities\Cake\Role.cs" />
+    <Compile Include="Entities\OfferBudget.cs" />
     <Compile Include="Entities\Security\Group.cs">
       <DependentUpon>SecurityModel.tt</DependentUpon>
     </Compile>
@@ -148,6 +149,10 @@
     <Compile Include="Migrations\201406031449369_CakeContactAndRole.Designer.cs">
       <DependentUpon>201406031449369_CakeContactAndRole.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201406042147505_OfferBudget.cs" />
+    <Compile Include="Migrations\201406042147505_OfferBudget.Designer.cs">
+      <DependentUpon>201406042147505_OfferBudget.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -213,6 +218,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201406031449369_CakeContactAndRole.resx">
       <DependentUpon>201406031449369_CakeContactAndRole.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201406042147505_OfferBudget.resx">
+      <DependentUpon>201406042147505_OfferBudget.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
