--- a/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
+++ b/3/DirectAgents.Web/DirectAgents.Web/DirectAgents.Web.csproj
@@ -849,6 +849,7 @@
     <Content Include="Views\Shared\DisplayTemplates\Percent.cshtml" />
     <Content Include="Views\Budgets\AccountManagers.cshtml" />
     <Content Include="Views\Budgets\Start.cshtml" />
+    <Content Include="Views\Shared\DisplayTemplates\DecimalComma.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
