sort offers on spent%, BudgetAlerts_TestEmail, CampaignsSortable-Loading...

--- a/3/DirectAgents.Web/DirectAgents.Web/Web.config
+++ b/3/DirectAgents.Web/DirectAgents.Web/Web.config
@@ -18,6 +18,9 @@
 
     <add key="GmailReporting_Email" value="reporting@directagents.com" />
     <add key="GmailReporting_Password" value="1423qrwe" />
+
+    <add key="BudgetAlerts_TestEmail" value="kevin@directagents.com" />
+    <add key="BudgetAlert_Emails" value="mediabuyers@directagents.com,campaigns@directagents.com"/>
   </appSettings>
 
   <system.web>
