--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -57,6 +57,9 @@
     <add key="GmailReporting_Email" value="reporting@directagents.com" />
     <add key="GmailReporting_Password" value="1423qrwe" />
 
+    <add key="BudgetAlerts_TestEmail" value="kevin@directagents.com" />
+    <add key="BudgetAlert_Emails" value="mediabuyers@directagents.com,campaigns@directagents.com"/>
+
     <add key="CakeApiKey" value="FCjdYAcwQE" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
     <add key="BingApiToken" value="EW65911AO" />
