--- a/1/DirectAgents.Domain/App.config
+++ b/1/DirectAgents.Domain/App.config
@@ -2,8 +2,8 @@
 <configuration>
   <configSections>
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-  </configSections>
+    
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
     <add name="DAContext" connectionString="data source=biz\sqlexpress;initial catalog=DirectAgentsDev;user id=sa;password=sp0ngbOb; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
     <add name="WikiContext" connectionString="metadata=res://*/Entities.Wiki.WikiModel.csdl|res://*/Entities.Wiki.WikiModel.ssdl|res://*/Entities.Wiki.WikiModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=biz\sqlexpress;initial catalog=DirectAgentsDev;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
