--- a/1/Solution/packages/repositories.config
+++ b/1/Solution/packages/repositories.config
@@ -8,6 +8,7 @@
   <repository path="..\..\DirectAgents.Domain\packages.config" />
   <repository path="..\..\EomTool\EomApp1\packages.config" />
   <repository path="..\..\EomTool\EomTool.Domain\packages.config" />
+  <repository path="..\..\EomTool\EomTool.Domain40\packages.config" />
   <repository path="..\..\EomTool\EomToolWeb.Tests\packages.config" />
   <repository path="..\..\EomTool\EomToolWeb\packages.config" />
   <repository path="..\..\QuickBooks.Test\packages.config" />
