--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -58,7 +58,7 @@
     <add key="GmailReporting_Password" value="1423qrwe" />
 
     <add key="BudgetAlerts_TestEmail" value="kevin@directagents.com" />
-    <add key="BudgetAlert_Emails" value="mediabuyers@directagents.com,campaigns@directagents.com"/>
+    <add key="BudgetAlerts_Email" value="mediabuyers@directagents.com"/>
 
     <add key="CakeApiKey" value="FCjdYAcwQE" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
