--- a/3/DirectAgents.Web/DirectAgents.Web/Web.config
+++ b/3/DirectAgents.Web/DirectAgents.Web/Web.config
@@ -20,7 +20,7 @@
     <add key="GmailReporting_Password" value="1423qrwe" />
 
     <add key="BudgetAlerts_TestEmail" value="kevin@directagents.com" />
-    <add key="BudgetAlert_Emails" value="mediabuyers@directagents.com,campaigns@directagents.com"/>
+    <add key="BudgetAlerts_Email" value="mediabuyers@directagents.com"/>
   </appSettings>
 
   <system.web>
