admin.advertisers- payment_terms... dropdowns

--- a/1/EomTool/EomToolWeb/EomToolWeb.csproj
+++ b/1/EomTool/EomToolWeb/EomToolWeb.csproj
@@ -145,6 +145,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AdminController.cs" />
+    <Compile Include="Controllers\WikiAdminController.cs" />
     <Compile Include="Controllers\AdvertisersController.cs" />
     <Compile Include="Controllers\BatchesController.cs" />
     <Compile Include="Controllers\BlogPostController.cs" />
@@ -3364,6 +3365,9 @@
     <Content Include="Views\Advertisers\Index.cshtml" />
     <Content Include="Views\Advertisers\_ViewStart.cshtml" />
     <Content Include="Views\Advertisers\Edit.cshtml" />
+    <Content Include="Views\Advertisers\Show.cshtml" />
+    <Content Include="Views\Admin\Index.cshtml" />
+    <Content Include="Views\Admin\_ViewStart.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
