EomTool- initial margin check code (+ model updates)

--- a/1/EomTool/EomApp1/Properties/Settings.settings
+++ b/1/EomTool/EomApp1/Properties/Settings.settings
@@ -155,5 +155,8 @@
     <Setting Name="SettingsConnectionString" Type="System.String" Scope="User">
       <Value Profile="(Default)">Data Source=biz\sqlexpress;Initial Catalog=DAMain1;User=sa;Password=sp0ngbOb</Value>
     </Setting>
+    <Setting Name="EOMWebBase" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">http://eomweb.directagents.local</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
