--- a/1/EomTool/EomToolWeb/EomToolWeb.csproj
+++ b/1/EomTool/EomToolWeb/EomToolWeb.csproj
@@ -3377,6 +3377,7 @@
     <Content Include="Views\Admin\Settings.cshtml" />
     <Content Include="Views\Admin\EditSettings.cshtml" />
     <Content Include="Views\Workflow\MarginApproval.cshtml" />
+    <Content Include="Views\Admin\MarginApprovals.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
