--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -17,6 +17,7 @@
     <add name="CakeTrafficContext" connectionString="data source=.\sql2;initial catalog=CakeTraffic;user id=sa;password=sp0ngbOb;" providerName="System.Data.SqlClient" />
 -->
     <add name="DAContext" connectionString="data source=biz\sqlexpress;initial catalog=DirectAgentsDev;user id=sa;password=sp0ngbOb; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
+    <add name="TDContext" connectionString="data source=biz\sqlexpress;initial catalog=ClientPortalTD;user id=sa;password=sp0ngbOb; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
 
   <loggingConfiguration name="" tracingEnabled="true" defaultCategory="General">
