--- a/1/EomTool/EomToolWeb/EomToolWeb.csproj
+++ b/1/EomTool/EomToolWeb/EomToolWeb.csproj
@@ -3379,7 +3379,8 @@
     <Content Include="Views\Admin\EditSettings.cshtml" />
     <Content Include="Views\Workflow\MarginApproval.cshtml" />
     <Content Include="Views\Admin\MarginApprovals.cshtml" />
-    <Content Include="Views\Admin\PeriodMaintenance.cshtml" />
+    <Content Include="Views\Admin\AdvertiserMaintenance.cshtml" />
+    <Content Include="Views\Admin\AffiliateMaintenance.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
