--- a/1/EomTool/EomToolWeb/Web.config
+++ b/1/EomTool/EomToolWeb/Web.config
@@ -10,6 +10,7 @@
     
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
+    <add name="SecurityEntities" connectionString="metadata=res://*/Entities.Security.SecurityModel.csdl|res://*/Entities.Security.SecurityModel.ssdl|res://*/Entities.Security.SecurityModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=biz\sqlexpress;initial catalog=EomToolSecurity;persist security info=True;user id=sa;password=sp0ngbOb;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="EomToolSecurityEntities" connectionString="metadata=res://*/Entities.EomToolSecurity.csdl|res://*/Entities.EomToolSecurity.ssdl|res://*/Entities.EomToolSecurity.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=biz\sqlexpress;initial catalog=EomToolSecurity;user id=sa;password=sp0ngbOb;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="DAMain1" connectionString="data source=biz\sqlexpress;initial catalog=DAMain1;user id=sa;password=sp0ngbOb" providerName="System.Data.SqlClient" />
     <add name="DAContext" connectionString="data source=biz\sqlexpress;initial catalog=DirectAgentsDev;user id=sa;password=sp0ngbOb; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
@@ -88,7 +89,7 @@
       </parameters>
     </defaultConnectionFactory>
   </entityFramework>
-  <eomToolWeb replaceIntegratedSecurityWithSALogin="true" saPassword="sp0ngbOb" debugMode="false">
+  <eomToolWeb replaceIntegratedSecurityWithSALogin="true" saPassword="sp0ngbOb" debugMode="true">
     <paymentBatches canHold="DIRECTAGENTS\jboaz" numAccountingPeriods="16" />
   </eomToolWeb>
 </configuration>
