TD web - initial version

--- a/3/ClientPortal.Web/ClientPortal.Web/ClientPortal.Web.csproj
+++ b/3/ClientPortal.Web/ClientPortal.Web/ClientPortal.Web.csproj
@@ -222,6 +222,8 @@
     <Compile Include="Areas\Admin\Models\CPMReportVM.cs" />
     <Compile Include="Areas\Admin\Models\CPMReportWizardVM.cs" />
     <Compile Include="Areas\Admin\Models\CreativeStatVM.cs" />
+    <Compile Include="Areas\TD\Controllers\ReportsController.cs" />
+    <Compile Include="Areas\TD\TDAreaRegistration.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\CPController.cs" />
     <Compile Include="Controllers\ExportController.cs" />
@@ -692,6 +694,9 @@
     <Content Include="Areas\Admin\Views\CPMReportsWizard\AddDrops.cshtml" />
     <Content Include="Areas\Admin\Views\CPMReportsWizard\EditReport.cshtml" />
     <Content Include="Areas\Admin\Views\CPMReportsWizard\Synch.cshtml" />
+    <Content Include="Areas\TD\Views\Web.config" />
+    <Content Include="Areas\TD\Views\_ViewStart.cshtml" />
+    <Content Include="Areas\TD\Views\Reports\Sample.cshtml" />
     <None Include="Properties\PublishProfiles\clientportal.directagents.local - Debug.pubxml" />
     <None Include="Properties\PublishProfiles\gogrid - debug.pubxml" />
     <None Include="Properties\PublishProfiles\gogrid - prod.pubxml" />
@@ -1640,6 +1645,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Areas\TD\Models\" />
+    <Folder Include="Areas\TD\Views\Shared\" />
     <Folder Include="Filters\" />
   </ItemGroup>
   <PropertyGroup>
