--- a/3/ClientPortal.Web/ClientPortal.Web/ClientPortal.Web.csproj
+++ b/3/ClientPortal.Web/ClientPortal.Web/ClientPortal.Web.csproj
@@ -702,6 +702,7 @@
     <Content Include="Areas\TD\Views\Home\Index.cshtml" />
     <Content Include="Areas\TD\Views\Reports\Summary.cshtml" />
     <Content Include="Areas\TD\Views\Reports\ChartSetup.cshtml" />
+    <Content Include="Areas\TD\Views\Reports\Creative.cshtml" />
     <None Include="Properties\PublishProfiles\clientportal.directagents.local - Debug.pubxml" />
     <None Include="Properties\PublishProfiles\gogrid - debug.pubxml" />
     <None Include="Properties\PublishProfiles\gogrid - prod.pubxml" />
