--- a/3/ClientPortal.Web/ClientPortal.Web/ClientPortal.Web.csproj
+++ b/3/ClientPortal.Web/ClientPortal.Web/ClientPortal.Web.csproj
@@ -216,6 +216,8 @@
     <Compile Include="Areas\Admin\Controllers\CreativeStatsController.cs" />
     <Compile Include="Areas\Admin\Controllers\HomeController.cs" />
     <Compile Include="Areas\Admin\Controllers\OffersController.cs" />
+    <Compile Include="Areas\Admin\Controllers\TDController.cs" />
+    <Compile Include="Areas\Admin\Models\AdminModel.cs" />
     <Compile Include="Areas\Admin\Models\CampaignDropVM.cs" />
     <Compile Include="Areas\Admin\Models\CampaignDropWizardVM.cs" />
     <Compile Include="Areas\Admin\Models\ContactVM.cs" />
@@ -703,6 +705,7 @@
     <Content Include="Areas\TD\Views\Reports\Summary.cshtml" />
     <Content Include="Areas\TD\Views\Reports\ChartSetup.cshtml" />
     <Content Include="Areas\TD\Views\Reports\Creative.cshtml" />
+    <Content Include="Areas\Admin\Views\TD\InsertionOrders.cshtml" />
     <None Include="Properties\PublishProfiles\clientportal.directagents.local - Debug.pubxml" />
     <None Include="Properties\PublishProfiles\gogrid - debug.pubxml" />
     <None Include="Properties\PublishProfiles\gogrid - prod.pubxml" />
